--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
       }
     </script>
     <style>
-      /* Smooth scrolling and basic reset */
       body {
         background-color: #f1f5f9;
         -webkit-tap-highlight-color: transparent;
       }
-      /* Hide scrollbar for horizontal lists but allow scroll */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
       }
@@ -38,20 +36,10 @@
         scrollbar-width: none;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
-  }
-}
-</script>
-</head>
+    </head>
   <body>
     <div id="root"></div>
+    
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
